# Porridge

./: .gitignore  README.md
cpp/: CMakeLists.txt  parse_results.py
cpp/fem/include/: analyzes.hpp  elem_beam.hpp  elem_plate.hpp  element_traits.hpp  fem.hpp  staticNL.hpp
cpp/fem/info/: Beam stiffness matrises.txt
cpp/fem/source/: analyzes.cpp  elem_beam.cpp  elem_plate.cpp  element_traits.cpp  fem.cpp
cpp/math/: CMakeLists.txt  parse_results.py
cpp/math/include/: continuation.hpp  corrector.h  corrector.hpp  dft.hpp  harmonic_balance.hpp  linalg.h  linalg.hpp  numerical_continuation_base.hpp  predictor.hpp  slice.hpp  vector.h  vector.hpp
cpp/math/source/: corrector.cpp  dft.cpp  harmonic_balance.cpp  linalg.cpp  main.cpp  predictor.cpp
